--- a/src/main/resources/static/admin/css/pages/prescriptions.html
+++ b/src/main/resources/static/admin/css/pages/prescriptions.html
@@ -41,24 +41,14 @@
                 <span class="text">Orders</span>
             </a>
         </li>
-<!--        <li>-->
-<!--            <a href="/admin/css/pages/inventory.html">-->
-<!--                <i class='bx bxs-box'></i>-->
-<!--                <span class="text">Inventory</span>-->
-<!--            </a>-->
-<!--        </li>-->
+
         <li>
             <a href="/admin/css/pages/users.html">
                 <i class='bx bx-user'></i>
                 <span class="text">Users</span>
             </a>
         </li>
-<!--        <li>-->
-<!--            <a href="/admin/css/pages/delivery.html">-->
-<!--                <i class='bx bxs-report'></i>-->
-<!--                <span class="text">Delivery</span>-->
-<!--            </a>-->
-<!--        </li>-->
+
     </ul>
     <ul class="side-menu">
         <li>
@@ -83,21 +73,16 @@
     <nav>
         <i class='bx bx-menu'></i>
         <a href="#" class="nav-link">Prescriptions</a>
-        <form action="#">
-            <div class="form-input">
-                <input type="search" placeholder="Search...">
-                <button type="submit" class="search-btn"><i class='bx bx-search'></i></button>
-            </div>
-        </form>
-        <input type="checkbox" id="switch-mode" hidden>
-        <label for="switch-mode" class="switch-mode"></label>
-        <a href="#" class="notification">
-            <i class='bx bxs-bell'></i>
-            <span class="num">5</span>
-        </a>
-        <a href="#" class="profile">
-            <img src="img/people.png">
-        </a>
+
+        <div class="header-right-part">
+            <input type="checkbox" id="switch-mode" hidden>
+            <label for="switch-mode" class="switch-mode"></label>
+
+            <a href="#" class="profile">
+                <img src="img/people.png" alt="">
+            </a>
+        </div>
+
     </nav>
     <!-- NAVBAR -->
 
