feat: add setting update

--- a/src/main/resources/static/admin/css/pages/settings.html
+++ b/src/main/resources/static/admin/css/pages/settings.html
@@ -108,58 +108,58 @@
         <!-- SETTINGS SECTIONS -->
         <div class="settings-container">
             <!-- ACCOUNT SETTINGS -->
-            <div class="settings-section">
-                <div class="section-header">
-                    <h2>Account Settings</h2>
-                </div>
-                <div class="section-content">
-                    <div class="setting-item">
-                        <label for="adminName">Admin Name</label>
-                        <input type="text" id="adminName" placeholder="Enter admin name" value="Admin User">
-                    </div>
-                    <div class="setting-item">
-                        <label for="adminEmail">Email Address</label>
-                        <input type="email" id="adminEmail" placeholder="Enter email address" value="admin@medistore.com">
-                    </div>
-                    <div class="setting-item">
-                        <label>Change Password</label>
-                        <button class="btn btn-primary" id="changePasswordBtn">
-                            <i class='bx bxs-lock'></i> Change Password
-                        </button>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="settings-section">-->
+<!--                <div class="section-header">-->
+<!--                    <h2>Account Settings</h2>-->
+<!--                </div>-->
+<!--                <div class="section-content">-->
+<!--                    <div class="setting-item">-->
+<!--                        <label for="adminName">Admin Name</label>-->
+<!--                        <input type="text" id="adminName" placeholder="Enter admin name" value="Admin User">-->
+<!--                    </div>-->
+<!--                    <div class="setting-item">-->
+<!--                        <label for="adminEmail">Email Address</label>-->
+<!--                        <input type="email" id="adminEmail" placeholder="Enter email address" value="admin@medistore.com">-->
+<!--                    </div>-->
+<!--                    <div class="setting-item">-->
+<!--                        <label>Change Password</label>-->
+<!--                        <button class="btn btn-primary" id="changePasswordBtn">-->
+<!--                            <i class='bx bxs-lock'></i> Change Password-->
+<!--                        </button>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <!-- NOTIFICATION SETTINGS -->
-            <div class="settings-section">
-                <div class="section-header">
-                    <h2>Notification Settings</h2>
-                </div>
-                <div class="section-content">
-                    <div class="setting-item checkbox-group">
-                        <label>
-                            <input type="checkbox" id="emailNotifications" checked>
-                            Receive Email Notifications
-                        </label>
-                        <p class="description">Get updates about orders, deliveries, and system alerts via email.</p>
-                    </div>
-                    <div class="setting-item checkbox-group">
-                        <label>
-                            <input type="checkbox" id="smsNotifications">
-                            Receive SMS Notifications
-                        </label>
-                        <p class="description">Get critical alerts via SMS (e.g., delivery delays).</p>
-                    </div>
-                    <div class="setting-item">
-                        <label for="notificationFrequency">Notification Frequency</label>
-                        <select id="notificationFrequency">
-                            <option value="instant">Instant</option>
-                            <option value="daily" selected>Daily Digest</option>
-                            <option value="weekly">Weekly Summary</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="settings-section">-->
+<!--                <div class="section-header">-->
+<!--                    <h2>Notification Settings</h2>-->
+<!--                </div>-->
+<!--                <div class="section-content">-->
+<!--                    <div class="setting-item checkbox-group">-->
+<!--                        <label>-->
+<!--                            <input type="checkbox" id="emailNotifications" checked>-->
+<!--                            Receive Email Notifications-->
+<!--                        </label>-->
+<!--                        <p class="description">Get updates about orders, deliveries, and system alerts via email.</p>-->
+<!--                    </div>-->
+<!--                    <div class="setting-item checkbox-group">-->
+<!--                        <label>-->
+<!--                            <input type="checkbox" id="smsNotifications">-->
+<!--                            Receive SMS Notifications-->
+<!--                        </label>-->
+<!--                        <p class="description">Get critical alerts via SMS (e.g., delivery delays).</p>-->
+<!--                    </div>-->
+<!--                    <div class="setting-item">-->
+<!--                        <label for="notificationFrequency">Notification Frequency</label>-->
+<!--                        <select id="notificationFrequency">-->
+<!--                            <option value="instant">Instant</option>-->
+<!--                            <option value="daily" selected>Daily Digest</option>-->
+<!--                            <option value="weekly">Weekly Summary</option>-->
+<!--                        </select>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
             <!-- APPEARANCE SETTINGS -->
             <div class="settings-section">
